# instrument-controller

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  gaussian-1d.txt  linear-1d.txt  vcpkg.json  vcpkg.json.release
tests/: CMakeLists.txt  iss-smoke-test.ps1  iss-smoke-test.sh  smoke-measure.lua  toy-measure.lua
tests/data-retrieval-1D/: 2-dot-1-chargesensor-wiremap.yml  2-dot-1-chargesensor-wiremap2.yaml  data-retrieval.cpp  multimeter-config.yml  multimeter-config.yml.tmpl  source-config.yml  test-config.yaml
tests/data-retrieval-1D/measurement-scripts/: 1D Gaussian Noise.tl  1D Voltage Sweep Current.tl  2D Voltage Sweep Current.tl  measure_get_set.tl  set_voltage.tl
tests/device-configs/: 2-dot-1-chargesensor.yml
tests/hub/datacache/: measurements.db  measurements.db-shm  measurements.db-wal
tests/hub/log/: make_tes_out.txt  make_test_out.txt
tests/instrument-apis/: generated-multimeter-api.yml  generated-source-api.yml  multimeter-api.yml.tmpl  source-api.yml.tmpl
tests/instrument-control/: data-retrieval.cpp  multimeter-api-direct.yml  multimeter-config-direct.yml  multimeter-config.yml  test-config.yaml
tests/instrument-control/measurement-scripts/: get_all_voltages.tl  get_many_voltages.tl  get_number_of_samples.tl  get_sample_rate.tl  get_slope.tl  get_trigger_leader.tl  get_voltage.tl  measure_1D_buffered.tl  measure_2D_buffered.tl  measure_current.tl  measure_get_set.tl  measure_illumination.tl  measure_leakage.tl  ramp.tl  set_many_voltages.tl  set_number_of_samples.tl  set_sample_rate.tl  set_slope.tl  set_trigger_leader.tl  set_voltage.tl
tests/instrument-lua-libs/: multimeter.lua  source.lua
tests/instrument-plugins/: mock-multimeter.c  mock-multimeter.cpp  mock-voltage-source.c  mock-voltage-source.cpp
tests/lua/: 1D Gaussian Noise.lua  1D Voltage Sweep Current.lua  2D Voltage Sweep Current.lua  get_all_voltages.lua  get_many_voltages.lua  get_number_of_samples.lua  get_sample_rate.lua  get_slope.lua  get_trigger_leader.lua  get_voltage.lua  measure_1D_buffered.lua  measure_2D_buffered.lua  measure_current.lua  measure_get_set.lua  measure_illumination.lua  measure_leakage.lua  ramp.lua  set_many_voltages.lua  set_number_of_samples.lua  set_sample_rate.lua  set_slope.lua  set_trigger_leader.lua  set_voltage.lua
tests/teal/: multimeter.tl  source.tl
tests/test-data/: gaussian-1d.txt  gen_data  gen_data.cpp  linear-1d.txt
tests/test-runs/DataRetrievalTest_Gaussian1DMeasureGetSet_108866_1783435770109281489/: test-config.yaml
tests/test-runs/DataRetrievalTest_Gaussian1DMeasureGetSet_52825_1782235443491091030/: test-config.yaml
tests/test-runs/DataRetrievalTest_Gaussian1DMeasureGetSet_87233_1783435573464198799/: test-config.yaml
tests/test-runs/DataRetrievalTest_GetAllVoltages_108826_1783435768828602350/: test-config.yaml
tests/test-runs/DataRetrievalTest_GetAllVoltages_52037_1782235414455971358/: test-config.yaml
tests/test-runs/DataRetrievalTest_GetAllVoltages_87193_1783435572048406634/: test-config.yaml
tests/test-runs/DataRetrievalTest_GetManyVoltages_108816_1783435768510880146/: test-config.yaml
tests/test-runs/DataRetrievalTest_GetManyVoltages_51892_1782235412000661175/: test-config.yaml
tests/test-runs/DataRetrievalTest_GetManyVoltages_87183_1783435571753144962/: test-config.yaml
tests/test-runs/DataRetrievalTest_GetNumberOfSamples_108786_1783435767607994744/: test-config.yaml
tests/test-runs/DataRetrievalTest_GetNumberOfSamples_51439_1782235404357125052/: test-config.yaml
tests/test-runs/DataRetrievalTest_GetNumberOfSamples_87153_1783435570791432515/: test-config.yaml
tests/test-runs/DataRetrievalTest_GetSampleRate_108776_1783435767308137925/: test-config.yaml
tests/test-runs/DataRetrievalTest_GetSampleRate_51279_1782235401936905274/: test-config.yaml
tests/test-runs/DataRetrievalTest_GetSampleRate_87143_1783435570478381827/: test-config.yaml
tests/test-runs/DataRetrievalTest_GetSlope_108796_1783435767920751902/: test-config.yaml
tests/test-runs/DataRetrievalTest_GetSlope_51589_1782235406958989804/: test-config.yaml
tests/test-runs/DataRetrievalTest_GetSlope_87163_1783435571105358748/: test-config.yaml
tests/test-runs/DataRetrievalTest_GetTriggerLeader_108806_1783435768217285258/: test-config.yaml
tests/test-runs/DataRetrievalTest_GetTriggerLeader_51733_1782235409578606322/: test-config.yaml
tests/test-runs/DataRetrievalTest_GetTriggerLeader_87173_1783435571427373058/: test-config.yaml
tests/test-runs/DataRetrievalTest_GetVoltage_108766_1783435766989613966/: test-config.yaml
tests/test-runs/DataRetrievalTest_GetVoltage_51109_1782235399471861079/: test-config.yaml
tests/test-runs/DataRetrievalTest_GetVoltage_87133_1783435570181854971/: test-config.yaml
tests/test-runs/DataRetrievalTest_MeasureCurrent_108836_1783435769132684796/: test-config.yaml
tests/test-runs/DataRetrievalTest_MeasureCurrent_52195_1782235416943781893/: test-config.yaml
tests/test-runs/DataRetrievalTest_MeasureCurrent_87203_1783435572356133050/: test-config.yaml
tests/test-runs/DataRetrievalTest_MeasureIllumination_108846_1783435769472716644/: test-config.yaml
tests/test-runs/DataRetrievalTest_MeasureIllumination_52479_1782235428454629870/: test-config.yaml
tests/test-runs/DataRetrievalTest_MeasureIllumination_87213_1783435572719702590/: test-config.yaml
tests/test-runs/DataRetrievalTest_MeasureLeakage_108856_1783435769775287972/: test-config.yaml
tests/test-runs/DataRetrievalTest_MeasureLeakage_52662_1782235436930441042/: test-config.yaml
tests/test-runs/DataRetrievalTest_MeasureLeakage_87223_1783435573074304523/: test-config.yaml
tests/test-runs/DataRetrievalTest_Ramp_108735_1783435766050625838/: test-config.yaml
tests/test-runs/DataRetrievalTest_Ramp_50664_1782235390958606807/: test-config.yaml
tests/test-runs/DataRetrievalTest_Ramp_87103_1783435569222401484/: test-config.yaml
tests/test-runs/DataRetrievalTest_SetManyVoltages_108725_1783435765753588177/: test-config.yaml
tests/test-runs/DataRetrievalTest_SetManyVoltages_50482_1782235387816629758/: test-config.yaml
(+143 files in other folders)
